--- a/src/components/css/Boxes.scss
+++ b/src/components/css/Boxes.scss
@@ -1,10 +1,24 @@
 $box_height_lg: 270px;
 $box_width_lg: 480px;
+$box_height_sm: 198px;
+$box_width_sm: 352px;
+$box_height_vsm: 162px;
+$box_width_vsm: 288px;
 
 .boxes {
     display: grid;
-    grid-auto-rows: $box_height_lg;
-    grid-template-columns: repeat(auto-fill, $box_width_lg);
+    @media screen and (min-width: 648px) {
+        grid-auto-rows: $box_height_lg;
+        grid-template-columns: repeat(auto-fill, $box_width_lg);
+    }
+    @media screen and (max-width: 648px) and (min-width: 429px) {
+        grid-auto-rows: $box_height_sm;
+        grid-template-columns: repeat(auto-fill, $box_width_sm);
+    }
+    @media screen and (max-width: 429px) {
+        grid-auto-rows: $box_height_vsm;
+        grid-template-columns: repeat(auto-fill, $box_width_vsm);
+    }
     grid-row-gap: 40px;
     grid-column-gap: 40px;
     align-items: center;
@@ -17,8 +31,19 @@ $box_width_lg: 480px;
         z-index: 0;
         box-shadow: 6px 4px #eee;
         color: $overview_theme;
-        width: $box_width_lg;
-        height: $box_height_lg;
+        @media screen and (min-width: 648px) {
+            width: $box_width_lg;
+            height: $box_height_lg;
+        }
+        @media screen and (max-width: 648px) and (min-width: 429px) {
+            width: $box_width_sm;
+            height: $box_height_sm;
+        }
+        @media screen and (max-width: 429px) {
+            width: $box_width_vsm;
+            height: $box_height_vsm;
+            border: 2px solid green;
+        }
         img {
             width: 100%;
             height: 100%;
@@ -40,18 +65,33 @@ $box_width_lg: 480px;
         figcaption {
             top: 35%;
             left: 50%;
-            font-size: 26px;
-            letter-spacing: 2px;
+            @media screen and (min-width: 648px) {
+                font-size: 26px;
+                letter-spacing: 2px;
+            }
+            @media screen and (max-width: 648px) {
+                font-size: 18px;
+            }
         }
         .when {
             top: 85%;
             left: 25%;
-            font-size: 16px;
+            @media screen and (min-width: 648px) {
+                font-size: 16px;
+            }
+            @media screen and (max-width: 648px) {
+                font-size: 12px;
+            }
         }
         .view-more {
             top: 85%;
             left: 80%;
-            font-size: 20px;
+            @media screen and (min-width: 648px) {
+                font-size: 20px;
+            }
+            @media screen and (max-width: 648px) {
+                font-size: 14px;
+            }
             cursor: pointer;
 
             &:hover {
@@ -144,7 +184,8 @@ $box_width_lg: 480px;
                 margin-bottom: 20px;
                 margin-left: 30px;
             }
-            .sentence p, ul.links p {
+            .sentence p,
+            ul.links p {
                 font-size: 18px;
             }
             ul.links li {
