--- a/src/components/css/Map.scss
+++ b/src/components/css/Map.scss
@@ -1,10 +1,18 @@
-span {
-    display: inline-block;
-    text-align: start;
+.map {
+    * {
+        text-align: start;
+    }
+
+    display: grid;
+    grid-template-columns: [_title]150px [_colon]25px [_value]1fr;
+    .title {
+        grid-column: _title;
+    }
+    .colon {
+        grid-column: _colon;
+    }
+    .value {
+        grid-column: _value;
+    }
 }
-.title {
-    width: 150px;
-}
-.colon {
-    width: 25px;
-}
+
