--- a/src/pages/home/css/Home.scss
+++ b/src/pages/home/css/Home.scss
@@ -1,121 +1,129 @@
-.hero {
-    img {
-        width: 100%;
-        height: 600px;
-        object-fit: cover;
-    }
-    position: relative;
-    .sentence {
-        z-index: 1;
-        position: absolute;
-        top: 80%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-
-        text-align: center;
-        font-size: 20px;
-        color: #eee;
-    }
-}
-
-.articles {
-    .article {
-        background-color: #fff;
-        $article_min_height_lg: 50vh;
-        display: flex;
-        @media screen and (min-width: 949px) {
-            // overflow-x: hidden;
-            margin: 0 auto;
-            min-height: $article_min_height_lg;
+.home {
+    overflow-x: hidden;
+    .hero {
+        img {
+            width: 100%;
+            @media screen and (min-width: 649px) {
+                height: 600px;
+            }
+            @media screen and (max-width: 648px) and (min-width: 429px) {
+                height: 450px;
+            }
+            @media screen and (max-width: 428px) {
+                height: 250px;
+            }
+            object-fit: cover;
         }
-        @media screen and (max-width: 948px) {
-            flex-direction: column;
+        position: relative;
+        .sentence {
+            z-index: 1;
+            position: absolute;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+
+            text-align: center;
+            @media screen and (min-width: 649px) {
+                top: 80%;
+                font-size: 20px;
+            }
+            @media screen and (max-width: 648px) and (min-width: 429px) {
+                top: 50%;
+                font-size: 18px;
+            }
+            @media screen and (max-width: 428px) {
+                top: 50%;
+                font-size: 14px;
+            }
+            color: #eee;
         }
-        .header {
-            font-family: "Economica", sans-serif;
-            box-shadow: none;
+    }
+
+    .articles {
+        article {
+            background-color: #fff;
+            $article_min_height_lg: 50vh;
+            display: flex;
             @media screen and (min-width: 949px) {
-                font-size: 30px;
-                background-color: #555;
-                letter-spacing: 2px;
+                // overflow-x: hidden;
+                margin: 0 auto;
                 min-height: $article_min_height_lg;
-                width: 250px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: #fff;
             }
-
             @media screen and (max-width: 948px) {
-                height: 100px;
-                background-color: #fff;
-                justify-self: center;
-                display: block;
-                .t-node {
-                    text-align: center;
-                    line-height: 100px;
-                    font-size: 40px;
-                    letter-spacing: 6px;
+                flex-direction: column;
+            }
+            .ar-title {
+                font-family: "Economica", sans-serif;
+                box-shadow: none;
+                @media screen and (min-width: 949px) {
+                    font-size: 30px;
+                    background-color: #555;
+                    letter-spacing: 2px;
+                    height: $article_min_height_lg;
+                    width: 250px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: #fff;
                 }
-                border: 2px solid blue;
-            }
-        }
-        .contents {
-            flex-grow: 1;
-            @media screen and (max-width: 948px) {
-                min-height: calc(50vh - #{100px});
-            }
-        }
-        &:nth-child(odd) {
-            @media screen and (min-width: 949px) {
-                flex-direction: row;
-                .header {
-                    border-right: 1px solid #555;
-                    transform: translateX(-40px) skewX(-10deg);
+
+                @media screen and (max-width: 948px) {
+                    height: 100px;
+                    background-color: #fff;
+                    letter-spacing: 4px;
+                    text-shadow: 4px 4px #777;
+                    justify-self: center;
+                    display: block;
                     .t-node {
-                        transform: rotate(-0.03turn);
+                        text-align: center;
+                        line-height: 100px;
+                        font-size: 40px;
+                        letter-spacing: 6px;
                     }
                 }
             }
-        }
-        &:nth-child(even) {
-            @media screen and (min-width: 949px) {
-                flex-direction: row-reverse;
-                .header {
-                    border-left: 1px solid #555;
-                    transform: translateX(40px) skewX(10deg);
-                    .t-node {
-                        transform: rotate(-0.03turn);
+            .contents {
+                flex-grow: 1;
+                @media screen and (max-width: 948px) {
+                    min-height: calc(50vh - #{100px});
+                }
+            }
+            &:nth-child(odd) {
+                @media screen and (min-width: 949px) {
+                    flex-direction: row;
+                    .ar-title {
+                        border-right: 1px solid #555;
+                        transform: translateX(-40px) skewX(-10deg);
+                        .t-node {
+                            transform: rotate(-0.03turn);
+                        }
                     }
                 }
             }
-        }
-        .contents {
-            @media screen and (min-width: 648px) {
-                padding: 50px 75px;
+            &:nth-child(even) {
+                @media screen and (min-width: 949px) {
+                    flex-direction: row-reverse;
+                    .ar-title {
+                        border-left: 1px solid #555;
+                        transform: translateX(40px) skewX(10deg);
+                        .t-node {
+                            transform: rotate(-0.03turn);
+                        }
+                    }
+                }
             }
-            @media screen and (max-width: 648px) {
-                padding-top: 50px;
-                padding-bottom: 50px;
-                border: 2px solid red;
+            .contents {
+                @media screen and (min-width: 649px) {
+                    padding: 50px 75px;
+                }
+                @media screen and (max-width: 648px) {
+                    padding-top: 50px;
+                    padding-bottom: 50px;
+                }
             }
         }
-    }
-    .article + .article {
-        border-top: 1px solid #555;
-    }
-}
-
-// 機能別のcss
-.contents.profile {
-    @media screen and (min-width: 648px) {
-        font-size: 20px;
-    }
-    @media screen and (max-width: 648px) {
-        font-size: 14px;
-    }
-    ul {
-        list-style: circle;
+        article + article {
+            border-top: 1px solid #555;
+        }
     }
 }
