[update] 必要な部分に、use-select: none; を追加

--- a/src/components/css/Footer.scss
+++ b/src/components/css/Footer.scss
@@ -12,5 +12,6 @@ footer {
         text-align: center;
         color: $copyright_font_color;
         line-height: $footer_height_lg;
+        user-select: none;
     }
 }
