--- a/src/components/css/Skills.scss
+++ b/src/components/css/Skills.scss
@@ -24,6 +24,7 @@
                     width: 32px;
                     height: 32px;
                     object-fit: cover;
+                    user-select: none;
                 }
                 .name {
                     padding-left: 10px;
