--- a/src/components/css/Header.scss
+++ b/src/components/css/Header.scss
@@ -29,6 +29,7 @@ header {
         text-decoration: none;
         color: #000;
         text-shadow: 2px 2px #666;
+        user-select: none;
     }
     .button {
         position: fixed;
