--- a/src/pages/home/css/Home.scss
+++ b/src/pages/home/css/Home.scss
@@ -13,6 +13,7 @@
                 height: 250px;
             }
             object-fit: cover;
+            user-select: none;
         }
         position: relative;
         .sentence {
