v.1.1.0 ・レスポンシブに対応させました。 ・コードを整理しました。

--- a/src/components/css/Header.scss
+++ b/src/components/css/Header.scss
@@ -1,45 +1,45 @@
-$header_title_width_lg: 300px;
-$header_links_width_lg: 300px;
-$header_height_lg: 120px;
-$header_background_color: #f8f8f8;
-$header_bottom_shadow_color: #f4f4f4;
-$header_links_font_color: #666;
-$header_links_font_color_hover: #222;
-
 header {
-    display: grid;
+    $header_height_lg: 120px;
+
     height: $header_height_lg;
+
+    background-color: #f8f8f8;
+    box-shadow: 8px 8px #f4f4f4;
+
+    display: grid;
     @media screen and (min-width: 429px) {
-        grid-template-columns: [_title]$header_title_width_lg 1fr;
+        grid-template-columns: [_title]300px 1fr;
     }
     @media screen and (max-width: 428px) {
         grid-template-columns: [_title]1fr;
     }
-    background-color: $header_background_color;
-    box-shadow: 8px 8px $header_bottom_shadow_color;
 
     .title {
         grid-column: _title;
-        padding-bottom: 5px;
-        line-height: $header_height_lg;
-        text-align: center;
-        font-family: "Caveat", cursive;
 
+        padding-bottom: 5px;
+        text-align: center;
+        line-height: $header_height_lg;
+
+        color: #000;
+        font-family: "Caveat", cursive;
         font-size: 70px;
         text-decoration: none;
-        color: #000;
         text-shadow: 2px 2px #666;
         user-select: none;
     }
+
     .button {
         position: fixed;
         top: 0%;
         left: 100%;
-        padding-top: 70px;
-        padding-right: 70px;
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         z-index: 13;
+
+        padding-top: 70px;
+        padding-right: 70px;
+
         font-size: 50px;
         cursor: pointer;
         user-select: none;
@@ -55,24 +55,23 @@ header {
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         z-index: 11;
-        background-color: #fffd;
 
-        // display: block;
+        background-color: #fffd;
         font-family: cursive;
+
         grid-auto-rows: 40px;
         grid-row-gap: 20px;
         align-content: center;
         justify-content: center;
+
         .link {
-            // display: block;
-            // text-align: center;
-            // margin: auto;
-            text-decoration: none;
-            color: $header_links_font_color;
-            letter-spacing: 2px;
+            color: #666;
             font-size: 26px;
+            text-decoration: none;
+            letter-spacing: 2px;
+
             &:hover {
-                color: $header_links_font_color_hover;
+                color: #222;
             }
         }
     }
