--- a/src/pages/home/css/Home.scss
+++ b/src/pages/home/css/Home.scss
@@ -1,5 +1,6 @@
 .home {
     overflow-x: hidden;
+
     .hero {
         img {
             width: 100%;
@@ -12,107 +13,138 @@
             @media screen and (max-width: 428px) {
                 height: 250px;
             }
+
             object-fit: cover;
             user-select: none;
         }
+
         position: relative;
         .sentence {
-            z-index: 1;
             position: absolute;
-            left: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-
-            text-align: center;
             @media screen and (min-width: 649px) {
                 top: 80%;
-                font-size: 20px;
             }
             @media screen and (max-width: 648px) and (min-width: 429px) {
                 top: 50%;
-                font-size: 18px;
             }
             @media screen and (max-width: 428px) {
                 top: 50%;
+            }
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            z-index: 1;
+
+            text-align: center;
+
+            color: #eee;
+            @media screen and (min-width: 649px) {
+                font-size: 20px;
+            }
+            @media screen and (max-width: 648px) and (min-width: 429px) {
+                font-size: 18px;
+            }
+            @media screen and (max-width: 428px) {
                 font-size: 14px;
             }
-            color: #eee;
         }
     }
 
     .articles {
         article {
-            background-color: #fff;
             $article_min_height_lg: 50vh;
-            display: flex;
+
             @media screen and (min-width: 949px) {
-                // overflow-x: hidden;
                 margin: 0 auto;
+
                 min-height: $article_min_height_lg;
             }
+
+            background-color: #fff;
+
+            display: flex;
             @media screen and (max-width: 948px) {
                 flex-direction: column;
             }
+
             .ar-title {
                 font-family: "Economica", sans-serif;
                 box-shadow: none;
+
                 @media screen and (min-width: 949px) {
-                    font-size: 30px;
-                    background-color: #555;
-                    letter-spacing: 2px;
                     height: $article_min_height_lg;
                     width: 250px;
+
+                    background-color: #555;
+                    color: #fff;
+                    font-size: 30px;
+                    letter-spacing: 2px;
+
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    color: #fff;
                 }
 
                 @media screen and (max-width: 948px) {
                     height: 100px;
+                    text-shadow: 4px 4px #777;
+
                     background-color: #fff;
                     letter-spacing: 4px;
-                    text-shadow: 4px 4px #777;
-                    justify-self: center;
+
                     display: block;
+                    justify-self: center;
+
                     .t-node {
                         text-align: center;
                         line-height: 100px;
+
                         font-size: 40px;
                         letter-spacing: 6px;
                     }
                 }
             }
+
             .contents {
                 flex-grow: 1;
+
                 @media screen and (max-width: 948px) {
                     min-height: calc(50vh - #{100px});
                 }
             }
+
             &:nth-child(odd) {
                 @media screen and (min-width: 949px) {
                     flex-direction: row;
+
                     .ar-title {
-                        border-right: 1px solid #555;
                         transform: translateX(-40px) skewX(-10deg);
+
+                        border-right: 1px solid #555;
+
                         .t-node {
                             transform: rotate(-0.03turn);
                         }
                     }
                 }
             }
+
             &:nth-child(even) {
                 @media screen and (min-width: 949px) {
                     flex-direction: row-reverse;
+
                     .ar-title {
-                        border-left: 1px solid #555;
                         transform: translateX(40px) skewX(10deg);
+
+                        border-left: 1px solid #555;
+
                         .t-node {
                             transform: rotate(-0.03turn);
                         }
                     }
                 }
             }
+
             .contents {
                 @media screen and (min-width: 649px) {
                     padding: 50px 75px;
@@ -123,6 +155,7 @@
                 }
             }
         }
+
         article + article {
             border-top: 1px solid #555;
         }
